--- a/www/styler.css
+++ b/www/styler.css
@@ -24,7 +24,8 @@ height: 100%;
     top:        0px;
     left:       0px;
    position:    fixed;
-   background-color:   #3498d8;
+   background-color:   #3498d8; 
+   border: 1px solid red;
    height: 100%;
 }
 
@@ -46,7 +47,7 @@ height: 100%;
 
 }
 
-#map {
+#leafmap {
     height: calc(100vh - 0px) !important;
     width: calc(100vw - 330px) !important;
     display: block;
@@ -95,8 +96,75 @@ p {
     font-weight: bold;
 }
 
+.leaflet-popup{
+  width:512px;
+  
+}
 
 
+
+.leaflet-popup-content {
+  margin: 0px 0px 0px 0px;
+  width: 100% !important;
+  display:block;
+  border: 1px solid purple;
+  
+}
+
+.popup-wrapper{
+    border: 1px solid red;
+    width: 100%;
+    min-height: 200px;
+
+}
+.popup-title{
+  width: 100%;
+  height: 50px;
+  border: 1px solid blue;
+  float: left;
+  display: block;
+  
+}
+.popup-title-marker{
+  width: 40px;
+  height: 40px;
+  border: 0px solid green;
+  float: left;
+  display: block;
+  background-size: cover;
+
+  
+}
+
+.popup-image{
+  width:140px;
+  max-width: 140px;
+  min-height: 200px;
+  overflow: hidden;
+  display: block;
+  float: left;
+  text-align: center;
+  border:0px solid green;
+  background-size: cover;
+  background-position: center;
+   background-repeat: no-repeat;
+
+  
+}
+.pu-img{
+   max-width:100%;
+    max-height:100%;
+    vertical-align: middle;
+  
+}
+.popup-text{
+  width:350px;
+  display: block;
+  padding: 4px 12px 4px 12px;
+  float: left;
+  border:1px solid pink;
+  
+}
 
 
 
