--- a/www/styler.css
+++ b/www/styler.css
@@ -282,7 +282,7 @@ p {
 
 .key-image{
    background-size: cover;
-    background-image: url('images/key.png');
+    background-image: url('images/key2.png');
     width:500px; 
     height:70px;
     float: right;
