--- a/www/styler.css
+++ b/www/styler.css
@@ -1,5 +1,11 @@
 
+@import "popup.css"; /* Using a string */
 
+/*
+element {
+  --m-sidebar-width: 20%;
+}
+*/
 
 body
 {
@@ -43,6 +49,8 @@ body
 }
 
 
+
+
 #wrapper 
 {
     background-color: #000000;
@@ -60,6 +68,7 @@ body
     display: block;
     margin-left:135px;
 }
+
 
 .search-button {
     float: right;
@@ -140,118 +149,6 @@ p {
   margin-top: 30px;
   
 }
-
-/*START POPUP*/
-
-.leaflet-popup-content {
-  margin: 0px 0px 0px 0px;
-  width: 100% !important;
-  display:block;
-  border: 0px solid purple;
-  
-}
-.leaflet-popup-content-wrapper{
-  padding: 0px 0px 0px 0px;
-  
-}
-
-.popup-wrapper{
-    border: 0px solid red;
-    width: 100%;
-    min-height: 240px;
-
-}
-.popup-title{
-  width: 100%;
-  height: 50px;
-  border: 0px solid blue;
-  float: left;
-  display: block;
-  
-}
-.popup-title-marker{
-  width: 47px;
-  height: 47px;
-  border: 0px solid green;
-  float: left;
-  display: block;
-  background-size: cover;
-
-  
-}
-.popup-title-text{
-  padding-left:10px;
-  
-}
-
-.popup-title-h1{
-  border:0px solid red; 
-  width: 70%; 
-  float:left; 
-  display:block; 
-  font-size: 20px; 
-  font-weight: bold;
-}
-.popup-title-h2{
-  line-height: 14px; 
-  border:0px solid red; 
-  width: 70%; 
-  float:left; 
-  display:block; 
-  font-size: 15px; 
-  font-weight: normal;
-}
-.pu-h2-adj{
-  width: 100%;
- /* margin-top:10px;
-  */
-}
-.popup-line{
-  float:left;
-  clear:left; 
-  display:block; 
-  padding-top:4px;
-  width:100%;
-  border: 0px solid red;
-  
-}
-.popup-line-adj{
-  padding-top:0px;
-  line-height: 15px;
-  
-}
-.popup-image{
-  width:160px;
-  max-width: 160px;
-  min-height: 240px;
-  overflow: hidden;
-  display: block;
-  float: left;
-  text-align: center;
-  border:0px solid green;
-  background-size: cover;
-  background-position: center;
-   background-repeat: no-repeat;
-   border-top-left-radius: 9px;
-   border-bottom-left-radius: 9px;
-
-  
-}
-.pu-img{
-   max-width:100%;
-    max-height:100%;
-    vertical-align: middle;
-  
-}
-.popup-text{
-  width:350px;
-  display: block;
-  padding: 4px 12px 4px 12px;
-  float: left;
-  border:0px solid pink;
-  
-}
-/*END KEY POPUP*/
 
 /*START KEY OVERLAY*/
 .key-overlay-container{
@@ -355,3 +252,35 @@ p {
 
 
 /*END COMPASS OVERLAY*/
+
+@media only screen and (max-width: 832px) {
+  /* For mobile phones: */
+/*  [class*="col-"] {
+    width: 100%;
+  }
+  */
+  #main-panel {
+    left: 0px;
+    width: 100%;
+    
+  }
+  #side-panel {
+      width: 20% !important;
+  }
+  #side-panel-wrapper{
+     width: 20% !important;
+  }
+   #leafmap {
+      width:100% !important;
+      margin-left:0%;
+      /*margin-left: var(--m-sidebar-width) ;
+      */
+  }
+   #main-panel {
+      margin-left: 0%;
+      /*margin-left: var(--m-sidebar-width) ;
+      */
+  }
+  
+}
+
