--- a/www/popup.css
+++ b/www/popup.css
@@ -1,5 +1,17 @@
 
+
+
 /*START POPUP*/
+
+.leaflet-popup{
+  width:512px;
+
+}
+
+.description{
+  margin-bottom: 12px;
+
+}
 
 .leaflet-popup-content {
   margin: 0px 0px 0px 0px;
@@ -28,8 +40,8 @@
   
 }
 .popup-title-marker{
-  width: 47px;
-  height: 47px;
+  width: 47px !important;
+  height: 47px !important;
   border: 0px solid green;
   float: left;
   display: block;
@@ -103,10 +115,76 @@
 }
 .popup-text{
   width:350px;
+  max-height: 240px;
+  overflow-y: auto;
+  overflow-x: hidden;
   display: block;
   padding: 4px 12px 4px 12px;
   float: left;
   border:0px solid pink;
+  direction:ltr;
   
 }
 /*END KEY POPUP*/
+
+  .popup-line-description{
+    line-height:15px; 
+    display:inline-block; 
+    overflow:hidden; 
+    text-overflow: ellipsis; 
+  }
+
+@media only screen and (max-width: 832px) {
+
+  .leaflet-popup{
+    width:256px;
+  }
+  .popup-wrapper{
+
+    min-height: 120px;
+
+  }
+  .popup-title{
+    height:25px;
+  }
+  .popup-image {
+    width: 80px;
+    max-width: 80px;
+    min-height: 120px;
+  }
+  .popup-text {
+    width: 176px;
+    display: block;
+    padding: 2px 6px 2px 6px;
+    max-height: 120px;
+  }
+
+  .popup-line{
+    font-size: 10px;
+    line-height: 1;
+  }
+
+  .marker-resize-01 {
+    width: 56px !important;
+    height: 25px !important;
+  }
+   .marker-resize-02 {
+    width: 24px !important;
+    height: 24px !important;
+  }
+
+  .popup-title-h1 {
+    font-size: 12px;
+  }
+  .popup-title-h2 {
+    font-size: 10px;
+    margin-top: -5px;
+  }
+  .pu-h2-adj{
+    margin-top: 0px;
+    line-height: 1;
+  }
+  .no-left-margin{
+    margin-left: 0px;
+  }
+}
