--- a/www/styler.css
+++ b/www/styler.css
@@ -6,7 +6,25 @@ element {
   --m-sidebar-width: 20%;
 }
 */
+/*
+::-webkit-scrollbar {
+    width: 12px;
+}
 
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+
+    border-radius: 10px;
+
+    max-height: 200px;
+
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+}
+*/
 body
 {
 
@@ -82,7 +100,6 @@ body
 
 #wrapper 
 {
-    background-color: #000000;
    /*background: #3498d8;*/
     height: 100%;
     top: 0px;
@@ -165,15 +182,7 @@ p {
     font-weight: bold;
 }
 
-.leaflet-popup{
-  width:512px;
-  
-}
 
-.description{
-  margin-bottom: 12px;
-  
-}
 .filters{
   font-weight: normal;
   margin-top: 30px;
