--- a/www/styler.css
+++ b/www/styler.css
@@ -1,30 +1,18 @@
 @import url("https://fonts.googleapis.com/css?family=Mansarat");
 @import "popup.css"; /* Using a string */
 
-/*
-element {
-  --m-sidebar-width: 20%;
-}
-*/
-/*
-::-webkit-scrollbar {
-    width: 12px;
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.example::-webkit-scrollbar {
+    display: none;
 }
 
-::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-
-    border-radius: 10px;
-
-    max-height: 200px;
-
+/* Hide scrollbar for IE, Edge and Firefox */
+.example {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
 }
 
-::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
-}
-*/
 body
 {
 
