--- a/www/popup.css
+++ b/www/popup.css
@@ -66,7 +66,8 @@
 .popup-title-h2{
   line-height: 14px; 
   border:0px solid red; 
-  /*width: 70%;*/
+  width: 70%;
+  min-width: 200px;
   float:left;
   display:block; 
   font-size: 15px; 
@@ -195,6 +196,7 @@
   .popup-title-h2 {
     font-size: 10px;
     margin-top: -5px;
+    min-width: 20px;
   }
   .pu-h2-adj{
     margin-top: 0px;
