mobile popup margin updated

--- a/www/popup.css
+++ b/www/popup.css
@@ -188,6 +188,7 @@
    .marker-resize-02 {
     width: 24px !important;
     height: 24px !important;
+    margin-right: 2px !important;
   }
 
   .popup-title-h1 {
