--- a/www/popup.css
+++ b/www/popup.css
@@ -18,6 +18,8 @@
   width: 100% !important;
   display:block;
   border: 0px solid purple;
+      font-family: 'Montserrat',sans-serif !important;
+
   
 }
 .leaflet-popup-content-wrapper{
@@ -38,6 +40,7 @@
   float: left;
   display: block;
   z-index: 1000;
+
 }
 .popup-title-marker{
   width: 47px;
@@ -196,7 +199,7 @@
   }
   .popup-title-h2 {
     font-size: 10px;
-    margin-top: -5px;
+    margin-top: -3px;
     min-width: 20px;
   }
   .pu-h2-adj{
