--- a/www/styler.css
+++ b/www/styler.css
@@ -410,6 +410,69 @@ p {
         display:none;
 
     }
+    
 
+}
+#action-button-container{
+  border:1px solid white;
+   border-top-left-radius: 9px;
+   border-bottom-left-radius: 9px;
+   border-top-right-radius: 9px;
+   border-bottom-right-radius: 9px;
+   min-height: 150px;
+   position: relative;
+   display: block;
+   text-align: center;
+   
+}
+.button-row{
+  display: inline-block;
+  clear:left;
+  position: relative;
+  height: 61px;
+  border: 0px solid red;
+  margin: 0 auto;
+  margin-top: 10px;
+  vertical-align: top;
+  
+  
+}
+.button-wrapper{
+  float:left;
+  position:relative;
+  display: block;
+
+  
+  margin-left: 5px;
+  margin-right: 5px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  width: 50px;
+  height: 60px;
+ 
+  border: 0px solid red;
+  top: 1px;
+}
+.button{
+ 
+  position:relative;
+  margin: 0 auto;
+  text-align: center;
+  display: block;
+}
+.button_label{
+
+  position:relative;
+  clear: left;
+  font-size: 8px;
+  margin: 0 auto;
+  display: block;
+  text-align: center;
+  height: 22px;
+  
+}
+.btn{
+  border-radius: 9px;
+  
 }
 
