--- a/www/styler.css
+++ b/www/styler.css
@@ -32,6 +32,7 @@ body
   
 }
 
+
 #background{
   	min-height: 100%;
     min-width: calc(100% - 180px);
@@ -78,19 +79,114 @@ body
    border: 0px solid red;
    height: 100%;
    z-index: 900;
+   overflow-y: scroll;
+   padding-bottom:20px;
 }
+
+#side-panel::-webkit-scrollbar {
+  width: 1em;
+}
+ 
+#side-panel::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+ 
+#side-panel::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.3);;
+  outline: 1px solid rgba(0, 0, 0, 0.3);;
+}
+
 
 #side-panel-wrapper
 {
     width: 265px;
     margin: 0 auto;
+   /* margin-left: 10px;*/
     margin-top: 25px;
+   
     
 }
 
 .side-panel-description{
   margin-bottom: 12px;
   
+}
+
+
+#action-button-container{
+  border:2px solid #99ccff;
+   border-top-left-radius: 9px;
+   border-bottom-left-radius: 9px;
+   border-top-right-radius: 9px;
+   border-bottom-right-radius: 9px;
+   min-height: 150px;
+   position: relative;
+   display: block;
+   text-align: center;
+   margin-bottom:10px;
+   
+}
+.button-row{
+  display: inline-block;
+  clear:left;
+  position: relative;
+  height: 61px;
+  border: 0px solid red;
+  margin: 0 auto;
+  margin-top: 10px;
+  vertical-align: top;
+  
+  
+}
+.button-wrapper{
+  float:left;
+  position:relative;
+  display: block;
+
+  
+  margin-left: 5px;
+  margin-right: 5px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  width: 50px;
+  height: 60px;
+ 
+  border: 0px solid red;
+  top: 1px;
+}
+.button{
+ 
+  position:relative;
+  margin: 0 auto;
+  text-align: center;
+  display: block;
+}
+.button_label{
+
+  position:relative;
+  clear: left;
+  font-size: 8px;
+  margin: 0 auto;
+  display: block;
+  text-align: center;
+  height: 22px;
+  
+}
+.btn{
+  border-radius: 9px;
+  
+}
+
+
+.side-panel-buttons{
+  width: 34px; 
+  height: 34px; 
+  margin: 0 auto;
+}
+.side-panel-buttons-boat{
+  width: 50px; 
+  height: 24px; 
+  margin: 0 auto;
 }
 
 
@@ -140,6 +236,7 @@ max-width: 120px;
   background-size: cover;
   min-height:80px;
   width:100%;
+   margin-left:-7px;
   
 }
 #title-image {
@@ -148,6 +245,7 @@ max-width: 120px;
     display: block;
     border: 2px solid #000000;
     margin: 0 auto;
+   
 }
 
 h1 {
@@ -331,16 +429,17 @@ p {
     
   }
   #side-panel {
-      width: clamp(150px, 20%, 256px)!important;
+      width: clamp(160px, 20%, 256px)!important;
       overflow-y: scroll;
       overflow-x: hidden;
-     /* width: 20% !important;*/
+      padding-left: 5px;
+     /* width:/* 20% !important;*/
       
   }
   #side-panel-wrapper{
      width: 100% !important;
-     margin-left: 5%;
-     margin-right: 5%;
+     margin-left: 7%;
+     margin-right: 0%;
      margin-top: 10px;
   }
   .side-panel-description{
@@ -406,73 +505,107 @@ p {
     
   }
 
-    .leaflet-pane.leaflet-tooltip-pane{
-        display:none;
+  .leaflet-pane.leaflet-tooltip-pane{
+     display:none;
 
-    }
+  }
+      
+      
+  #action-button-container{
+   
+     border-top-left-radius: 5px;
+     border-bottom-left-radius: 5px;
+     border-top-right-radius: 5px;
+     border-bottom-right-radius: 5px;
+     
+     width: 130px;
+     height: 250px;
+     padding-top: 7px;
+
+  }
+  .button-row{
+   
+    height: 120px;
+    margin-top: 0px;
+    
+    
+  }
+  .button-wrapper{
+    float:left;
+    position:relative;
+    display: block;
+  
+    
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    width: 50px;
+    height: 60px;
+   
+    border: 0px solid red;
+    top: 1px;
+  }
+  .button{
+   
+    position:relative;
+    margin: 0 auto;
+    text-align: center;
+    display: block;
+  }
+  .button_label{
+  
+    position:relative;
+    clear: left;
+    font-size: 8px;
+    margin: 0 auto;
+    display: block;
+    text-align: center;
+    height: 22px;
+    
+  }
+  .btn{
+    border-radius: 9px;
+    
+  }
+  
+  
+  .side-panel-buttons{
+    width: 34px; 
+    height: 34px; 
+    margin: 0 auto;
+  }
+  .side-panel-buttons-boat{
+    width: 50px; 
+    height: 24px; 
+    margin: 0 auto;
+  }  
     
 
 }
-#action-button-container{
-  border:1px solid white;
-   border-top-left-radius: 9px;
-   border-bottom-left-radius: 9px;
-   border-top-right-radius: 9px;
-   border-bottom-right-radius: 9px;
-   min-height: 150px;
-   position: relative;
-   display: block;
-   text-align: center;
-   
+.leaflet-control-layers{
+  width:120px;
+  height: 132px;
 }
-.button-row{
-  display: inline-block;
-  clear:left;
-  position: relative;
-  height: 61px;
-  border: 0px solid red;
-  margin: 0 auto;
-  margin-top: 10px;
-  vertical-align: top;
-  
-  
-}
-.button-wrapper{
-  float:left;
-  position:relative;
+.leaflet-control-layers-base{
+  position: absolute;
   display: block;
+  top: 40px;
+  background-color: none;
+}
+.leaflet-control-layers-overlays{
+  position: absolute;
+  display:block;
+  top: -5px;
+  background-color: none;
 
-  
-  margin-left: 5px;
-  margin-right: 5px;
-  margin-top: 0px;
-  margin-bottom: 0px;
-  width: 50px;
-  height: 60px;
- 
-  border: 0px solid red;
-  top: 1px;
 }
-.button{
- 
-  position:relative;
-  margin: 0 auto;
-  text-align: center;
+.leaflet-control-layers-separator{
+   position: absolute;
   display: block;
+  top: 33px;
+  width:120px;
+  background-color: none;
 }
-.button_label{
 
-  position:relative;
-  clear: left;
-  font-size: 8px;
-  margin: 0 auto;
-  display: block;
-  text-align: center;
-  height: 22px;
-  
-}
-.btn{
-  border-radius: 9px;
-  
-}
 
