--- a/www/styler.css
+++ b/www/styler.css
@@ -175,10 +175,15 @@ body
   
 }
 .btn{
-  border-radius: 9px; 
+  border-radius: 17px; 
   margin: 0 auto !important;
   margin-top: 8px !important;
+ 
   
+  
+}
+.btn-selected{
+  box-shadow: 3px 3px 3px 3px rgba(256,256,256,0.2);
 }
 
 
@@ -569,7 +574,7 @@ p {
     
   }
   .btn{
-    border-radius: 9px;
+    border-radius: 17px; 
     
   }
   
