--- a/www/styler.css
+++ b/www/styler.css
@@ -175,10 +175,15 @@ body
   
 }
 .btn{
-  border-radius: 9px; 
+  border-radius: 17px; 
   margin: 0 auto !important;
   margin-top: 8px !important;
+ 
   
+  
+}
+.btn-selected{
+  box-shadow: 3px 3px 3px 3px rgba(256,256,256,0.2);
 }
 
 
@@ -186,11 +191,15 @@ body
   width: 34px; 
   height: 34px; 
   margin: 0 auto;
+  background-size: cover; 
+  background-position: center;
 }
 .side-panel-buttons-boat{
   width: 50px; 
   height: 24px; 
   margin: 0 auto;
+  background-size: cover; 
+  background-position: center;
 }
 
 
@@ -569,7 +578,7 @@ p {
     
   }
   .btn{
-    border-radius: 9px;
+    border-radius: 17px; 
     
   }
   
